# tetris

./: .clang-format  CMakeLists.txt  start.sh
src/: game.cpp  main.cpp  stack.txt
src/elements/: block.cpp  blocks.cpp  grid.cpp
src/include/: block.h  colors.h  drop.h  game.h  grid.h  position.h
src/properties/: colors.cpp  position.cpp
src/utils/: drop.cpp
